--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ google-auth-httplib2==0.1.1
 pydantic==2.5.0
 python-dotenv==1.0.0
 requests==2.31.0
+streamlit==1.29.0
+plotly==5.17.0
+pandas==2.1.4
